corrected z-index of burger icon

--- a/src/components/navMenu.css
+++ b/src/components/navMenu.css
@@ -9,3 +9,9 @@ top :10px;
 left : 2px;
 
 }
+
+.burgerIcon{
+    z-index: 10;
+
+
+}
